content reorganized, dropbox links removed

--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
     <body>
         <div class="wrapper">
             <header>
-                <img src="https://www.dropbox.com/s/ns9p9oacdy5ovuj/user-profile-image.svg?raw=1">
+                <img src="img/user-profile-image.svg">
                 <h1>John Johnson</h1>
             </header>
             <ul>
                 <li><a href="#">
-                    <img src="https://www.dropbox.com/s/lbi1lvorhk9bns4/website-icon.svg?raw=1">
+                    <img src="img/icons/website-icon.svg">
                     <span>Website</span></a>
                 </li>
                 <li><a href="#">
-                    <img src="https://www.dropbox.com/s/5f5yfjokmywpadf/github-icon.svg?raw=1">
+                    <img src="img/icons/github-icon.svg">
                     <span>Github<span></a>
                 </li>
                 <li><a href="#">
-                    <img src="https://www.dropbox.com/s/5m0cwffcdu38fvm/linkedin-icon.svg?raw=1">
+                    <img src="img/icons/linkedin-icon.svg">
                     <span>LinkedIn</span></a>
                 </li>
                 <li><a href="#">
-                    <img src="https://www.dropbox.com/s/fm2tjudh2s99bfs/youtube-icon.svg?raw=1">
+                    <img src="img/icons/youtube-icon.svg">
                     <span>YouTube</span></a>
                 </li>
             </ul>
